Complete the styling of the project

--- a/index.html
+++ b/index.html
@@ -10,12 +10,7 @@
   <body>
     <div class="container">
       <div class="search-container">
-        <input
-          type="text"
-          id="my-name"
-          placeholder="Enter movie here ..."
-          value="Wednesday"
-        />
+        <input type="text" id="my-name" placeholder="Enter movie here ..." />
         <button id="search-btn">Search</button>
       </div>
       <div id="results"></div>
